# smtp-server

./: .gitignore  .projections.json  Makefile
client/: CMakeLists.txt
client/src/: main.c
server/: CMakeLists.txt
server/src/: main.c  transfer.c  transfer.h  tui.c  tui.h
shared/: util.c  util.h
src/: main.c  util.h
